# Speedo_meter_6.6.0

./: ArrowIndicator.qml  CMakeLists.txt  Main.qml  README.md  SpeedNeedle.qml  SpeedmeterStyle.qml  main.cpp  speedometerData.cpp  speedometerData.h
